--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
       </div>
     </nav>
 
+    <header id="header">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-10">
+            <h1><span class="glyphicon glyphicon-education" aria-hidden="true"></span> Dashboard <small>Manage Your Site</small></h1>
+          </div>
+          <div class="dropdown">
+  <button class="dropbtn">Dropdown</button>
+  <div class="dropdown-content">
+    <a href="#">Add Post</a>
+    <a href="#">Add Page</a>
+    <a href="#">Add User</a>
+  </div>
+</div>
+        </div>
+      </div>
+    </header>
+
+    <section id="breadcrumb">
+      <div class="container">
+        <ol class="breadcrumb">
+          <li class="active">Dashboard</li>
+        </ol>
+      </div>
+    </section>
+
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
