--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <script src="https://cdn.ckeditor.com/4.10.1/standard/ckeditor.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -230,6 +231,9 @@
   </div>
 </div>
 
+<script>
+	CKEDITOR.replace( 'editor1' );
+</script>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
