--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
       </div>
     </section>
 
+    <footer id="footer">
+      <p> Copyright AdminStrap, &copy;2018 </p>
+    </footer>
+
 <!-- Modals -->
 <!-- Add Page -->
 
